Support Java 17+